--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.0",
+    "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-elements": "^3.3.2",
+    "react-native-reanimated": "^2.1.0",
     "react-native-web": "^0.13.18"
   },
   "devDependencies": {
