--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
+    "react-date-picker": "^8.1.1",
     "react-dom": "^16.13.1",
     "react-grecaptcha": "^1.2.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
