--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "expo-crypto": "~9.1.0",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
+    "react-date-countdown-timer": "^1.0.9",
     "react-date-picker": "^8.1.1",
     "react-dom": "^16.13.1",
     "react-grecaptcha": "^1.2.5",
@@ -28,7 +30,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.13.18"
+    "react-native-web": "^0.13.18",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
