--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "expo-crypto": "~9.1.0",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
-    "moment": "^2.29.1",
+    "luxon": "^1.26.0",
     "react": "16.13.1",
     "react-date-countdown-timer": "^1.0.9",
     "react-date-picker": "^8.1.1",
