--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.2",
     "expo": "~41.0.0",
     "expo-crypto": "~9.1.0",
     "expo-font": "~9.1.0",
@@ -23,6 +25,7 @@
     "react-date-picker": "^8.1.1",
     "react-dom": "^16.13.1",
     "react-grecaptcha": "^1.2.5",
+    "react-helmet": "^6.1.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.10.2",
