--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-date-countdown-timer": "^1.0.9",
     "react-date-picker": "^8.1.1",
     "react-dom": "^16.13.1",
+    "react-easyfullscreen": "^1.1.1",
     "react-grecaptcha": "^1.2.5",
     "react-helmet": "^6.1.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
