--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.13.18",
+    "react-player": "^2.9.0",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
