--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.13.18",
     "react-player": "^2.9.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
