--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "expo-crypto": "~9.1.0",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "jodit-react": "^1.0.86",
     "luxon": "^1.26.0",
-    "react": "16.13.1",
+    "react": "^17.0.2",
     "react-date-countdown-timer": "^1.0.9",
     "react-date-picker": "^8.1.1",
     "react-dom": "^16.13.1",
