--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
@@ -21,7 +20,8 @@
     "expo-status-bar": "~1.0.4",
     "jodit-react": "^1.0.86",
     "luxon": "^1.26.0",
-    "react": "^17.0.2",
+    "react": "^16.8.2",
+    "react-color": "^2.19.3",
     "react-date-countdown-timer": "^1.0.9",
     "react-date-picker": "^8.1.1",
     "react-dom": "^16.13.1",
