--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.13.18",
+    "react-pdf": "^5.3.0",
     "react-player": "^2.9.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
