--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "luxon": "^1.26.0",
     "react": "^16.8.2",
     "react-color": "^2.18.0",
+    "react-confirm-alert": "^2.7.0",
     "react-currency-input-field": "^3.3.2",
     "react-date-countdown-timer": "^1.0.9",
     "react-date-picker": "^8.1.1",
