--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-web": "^0.13.18",
     "react-pdf": "^5.3.0",
     "react-player": "^2.9.0",
+    "react-spring": "^9.1.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "validate.js": "^0.13.1"
