--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-spring": "^9.1.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "socket.io-client": "^2.0.0",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
