--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@react-navigation/stack": "^5.14.4",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
+    "antd": "^4.16.8",
     "expo": "~41.0.0",
     "expo-crypto": "~9.1.0",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "jodit-react": "^1.0.86",
     "luxon": "^1.26.0",
+    "moment": "^2.29.1",
     "react": "^16.8.2",
     "react-color": "^2.18.0",
     "react-confirm-alert": "^2.7.0",
